# SOFT

./: .gitignore  CMakeLists.txt  CMakePresets.json.template  README.md  pyproject.toml
checker/src/: stabilizers.cpp
exec/: main.cpp  scan.hpp
magic state cultivation/circuits/: circuit_d3.stim  circuit_d5_p=0.0005.stim  circuit_d5_p=0.001.stim  circuit_d5_p=0.002.stim  circuit_d5_p=0.003.stim  circuit_d5_p=0.004.stim  circuit_d5_p=0.005.stim
magic state cultivation/d5_erroneous_cases/: circuit_d5_seed=13183729778409207054_shot=183956.reveal  circuit_d5_seed=15268119833135700945_shot=196597.reveal  circuit_d5_seed=15949548973805358588_shot=229142.reveal  circuit_d5_seed=16246853266321353913_shot=59863.reveal  circuit_d5_seed=17174864284142781373_shot=52126.reveal  circuit_d5_seed=1747065927749099931_shot=106486.reveal  circuit_d5_seed=3428300985073045312_shot=120959.reveal  circuit_d5_seed=3564365778772641563_shot=176099.reveal  circuit_d5_seed=3888844037539640079_shot=43912.reveal  circuit_d5_seed=5794091856923252450_shot=79622.reveal  circuit_d5_seed=6816890759256098814_shot=118937.reveal  circuit_d5_seed=723360710571592565_shot=109746.reveal  circuit_d5_seed=7376716200837196617_shot=167578.reveal  circuit_d5_seed=9013522971644637258_shot=190358.reveal  circuit_d5_seed=9600135592007779905_shot=195612.reveal  (+1 more)
scripts/compare/: compare.py  (+1 more)
source/: StabilizerSimulator.cpp  StabilizerSimulator.hpp  array.cuh  autofree.hpp  classical.cu  cleaner.hpp  dataops.cuh  datastruct.cuh  datatype.cuh  decompose.cu  decompose.cuh  decompose.hpp  dimsop.cuh  exceptions.hpp  exec.cpp  gates.cu  gates.cuh  gates_t.cu  measure.cu  noises.cu  print.hpp  read.hpp  shotsop.cuh  simulator.cu  simulator.hpp  stripes.cuh  tests.cpp  threads.cuh  utils.cuh  utils_exception.hpp  utils_stripes.cuh  utils_thread.cuh  write.hpp
tests/: main.cpp  main.cu  print.hpp
(+19 files in other folders)
